--- a/war/menu.css
+++ b/war/menu.css
@@ -14,3 +14,7 @@
 	z-index: 1000;
 }
 
+#menu-content {
+	height: 85%;
+}
+
